Changes for 1.0.1.4

* Fix bug [ 1951595 ] edit mode, fgt and inf placement in sz (ComradeKev)

* Tweak blending code to account for missing base/relief tiles (ComradeKev)
	Map makers need to include a blank_relief.png file, nothing extra is required for base tiles.

Changes for 1.0.1.3

* When executing sql in headless lobby, show error messages on the console (sgb)

* Update Great War map to remove small country markers (Jason Clark)

* Add Revised relief tiles (Zero Pilot)

* Update Revised colors (President Douchebag)

* Set max memory for mac release (sgb)

* Fix abend when there are no original owners in a territory (ComradeKev)

* Change so only original owner gets the faded kamikazi zone marker (ComradeKev)

* Fix display of Convoy Route text (ComradeKev)

* Fix PlacementPicker abends (ComradeKev)

* Fix Null Pointer [ 1068223 ] for non-required files in AutoPlacementFinder app (ComradeKev)

* Fix bug [ 1937303 ] casualty window shows all casualties as defending nation (ComradeKev)

* Fix bug [ 2066114 ] Industrial Tech advancement crashes stats tab in 4th edition games (President Douchebag)

* Add code to identify offending territory in AutoPlacementFinder exceptions for centers.txt (ComradeKev)

* Add code to allow Relief Map Blending (Overlay, Linear_Light, Multiply, Difference) via map.properties settings includes 3 parameters (ComradeKev) 
	map.mapBlends=true
	map.mapBlendMode=Linear_Light
	map.mapBlendAlpha=0.5f
	
Changes for 1.0.1.2
* Fix territory connections in Pacific

* Fix bug where hasLandRouteToEnemyOwnedCapitol causes abend for players with no Capital.  Returns none for 'optional' players

* Re-create code to change ownership of units so British/Australians can play on same turn in pacific

* Fix thrown exception with 4th edition neutral blitz/flyover. (Comradekev)

* Fix bug [ 2005292 ] LHTR planes not able to land on produced carriers. (ComradeKev)
